[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcore-rl-toolkit"
version = "0.1.0"
description = "Toolkit for Seamlessly Enabling RL Training with Bedrock AgentCore."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore>=1.0.3",
    "bedrock-agentcore-starter-toolkit<=0.2.0",
    "boto3>=1.40.55",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[tool.ruff]
line-length = 120
select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]

[tool.ruff.lint.isort]
known-first-party = ["agentcore_rl_toolkit"]
